--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MUSINSA - 날씨 탭</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="mobile-container">
+        <!-- Header -->
+        <header class="header">
+            <div class="logo">MUSINSA</div>
+            <div class="icons">
+              <img class="icon" src="free-icon-font-bell.png" alt="알림" />
+              <img class="icon" src="free-icon-font-shopping-bag.png" alt="장바구니" />
+            </div>
+        </header>
+
+        <!-- Search Bar -->
+        <div class="search-container">
+            <div class="search-bar">
+                <span class="search-placeholder">990딜, 선착순 구매 찬스</span>
+                <img class="icon2" src="free-icon-font-search.png" alt="돋보기" />
+            </div>
+        </div>
+
+        <!-- Tab Navigation -->
+        <nav class="tab-navigation">
+            <span class="tab-item">콘텐츠</span>
+            <span class="tab-item active">날씨</span>
+            <span class="tab-item">추천</span>
+            <span class="tab-item">랭킹</span>
+            <span class="tab-item">세일</span>
+            <span class="tab-item">브랜드</span>
+            
+        </nav>
+
+        <!-- Weather Info -->
+        <div class="weather-info">
+          <div class="weather-left">
+            <div class="weather-today">Today</div>
+            <div class="city-name">서울시 강남구</div>
+          </div>
+          <div class="weather-right">
+            <div class="weather-row">
+              <span class="weather-icon">☀️</span><span class="current-temp">27°</span>
+            </div>
+            <div class="temperature">18° / 23°</div>
+          </div>
+        </div>
+
+        <!-- Main Content -->
+        <main class="main-content">
+            <!-- Model Image Section -->
+            <div class="model-section">
+              <div class="navigation-arrows">
+                <button class="arrow-btn left">◀</button>
+              </div>
+              <div class="model-image"></div>
+              <div class="navigation-arrows">
+                <button class="arrow-btn right">▶</button>
+              </div>
+            </div>
+
+            <!-- Product Grid -->
+            <div class="product-grid">
+                <div class="product-item"></div>
+                <div class="product-item"></div>
+                <div class="product-item"></div>
+                <div class="product-item"></div>
+            </div>
+
+            <!-- Coordination Section -->
+            <div class="coord-section">
+                <h2 class="coord-title">오늘의 코디</h2>
+                <p class="coord-description">
+                    쌀쌀한 봄날씨에 어울리는 레이어드 룩.<br>
+                    가벼운 아우터와 편안한 데님으로 완성하세요.
+                </p>
+            </div>
+        </main>
+    </div>
     <script type="module" src="/src/main.js"></script>
-  </body>
+</body>
 </html>
